// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePageGrid Snapshots matches snapshot in empty state 1`] = `
<div>
  <div
    class="emptyState"
    role="status"
  >
    No modules available
  </div>
</div>
`;

exports[`HomePageGrid Snapshots matches snapshot in error state 1`] = `
<div>
  <div
    class="errorContainer"
    data-testid="home-error"
    role="alert"
  >
    <div
      class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--error"
      role="status"
    >
      <div
        class="cds--inline-notification__details"
      >
        <svg
          aria-hidden="true"
          class="cds--inline-notification__icon"
          fill="currentColor"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
          />
          <path
            d="M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
            data-icon-path="inner-path"
            opacity="0"
          />
          <title>
            error icon
          </title>
        </svg>
        <div
          class="cds--inline-notification__text-wrapper"
        >
          <div
            class="cds--inline-notification__subtitle"
            dir="auto"
          >
            Failed to load home page configuration
          </div>
        </div>
      </div>
      <button
        aria-label="close notification"
        class="cds--inline-notification__close-button"
        title="close notification"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="cds--inline-notification__close-icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`HomePageGrid Snapshots matches snapshot in loading state 1`] = `
<div>
  <div
    aria-busy="true"
    aria-label="Loading modules"
    class="container"
    role="status"
  >
    <div
      class="tileGrid"
    >
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
      <div
        class="cds--skeleton__placeholder skeletonTile"
      />
    </div>
  </div>
</div>
`;

exports[`HomePageGrid Snapshots matches snapshot with modules 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="tileGrid"
    >
      <a
        aria-label="LABEL_CLINICAL"
        class="cds--link cds--tile cds--tile--clickable tile"
        data-testid="app-tile-clinical"
        href="/clinical"
      >
        <h2
          aria-hidden="true"
          class="label"
        >
          LABEL_CLINICAL
        </h2>
        <div
          class="bottom"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
            />
          </svg>
        </div>
      </a>
      <a
        aria-label="LABEL_REGISTRATION"
        class="cds--link cds--tile cds--tile--clickable tile"
        data-testid="app-tile-registration"
        href="/registration"
      >
        <h2
          aria-hidden="true"
          class="label"
        >
          LABEL_REGISTRATION
        </h2>
        <div
          class="bottom"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
            />
          </svg>
        </div>
      </a>
      <a
        aria-label="LABEL_INPATIENT"
        class="cds--link cds--tile cds--tile--clickable tile"
        data-testid="app-tile-inpatient"
        href="/inpatient"
      >
        <h2
          aria-hidden="true"
          class="label"
        >
          LABEL_INPATIENT
        </h2>
        <div
          class="bottom"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
            />
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
